<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProductViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/barlow"
            android:text="@string/tittle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_add_shopping_cart_24" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:padding="5dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/previewIcon"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/isLoved"
                    android:scaleType="centerCrop" />

                <com.like.LikeButton
                    android:id="@+id/isLoved"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:baselineAlignBottom="true"
                    android:padding="6dp"
                    app:anim_scale_factor="3"
                    android:src="@drawable/ic_love" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/barlow"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/medium"
            android:fontFamily="@font/barlow"
            android:text="@string/item_amount_kg"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:padding="5dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_background"
                android:padding="10dp"
                android:text="@string/btn_add"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/rtl_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="30dp"
                    android:layout_toStartOf="@+id/quantity"
                    android:background="@drawable/circular_button"
                    app:icon="@drawable/ic_baseline_horizontal_rule_24" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="1"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@id/quantity"
                    android:background="@drawable/circular_button"
                    app:icon="@drawable/ic_baseline_plus" />

            </RelativeLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_dtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium"
            android:fontFamily="@font/barlow"
            android:text="Details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.skyhope.showmoretextview.ShowMoreTextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_dtl"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:fontFamily="@font/barlow"
            android:text="@string/item_description"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>