<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_border">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="5dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/isLoved"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_love" />

                <ImageView
                    android:id="@+id/ic_unlike"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_heart"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/previewIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:transitionName="profile" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <TextView
                    android:id="@+id/itm_name"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:fontFamily="@font/barlow"
                    android:gravity="start"
                    android:text="@string/item_name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/itm_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/barlow"
                    android:text="@string/item_amount" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPurchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/itm_name"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_background"
                    android:padding="10dp"
                    android:text="@string/btn_add"
                    android:textColor="@color/white" />

                <RelativeLayout
                    android:id="@+id/rtl_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itm_name"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="12dp"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_minus"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/circular_button"
                        app:icon="@drawable/ic_baseline_horizontal_rule_24" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="5dp"
                        android:text="1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_plus"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/circular_button"
                        app:icon="@drawable/ic_baseline_plus" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>