<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CartActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cart_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:padding="5dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/isCanceled"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:baselineAlignBottom="true"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_clear_24" />

            <TextView
                android:id="@+id/item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/isCanceled"
                android:fontFamily="@font/barlow"
                android:padding="6dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ic_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:baselineAlignBottom="true"
                android:padding="6dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/txt_pincode_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isCanceled"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/isCanceled"
                android:fontFamily="@font/barlow"
                android:text="@string/txt_pin"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pincode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isCanceled"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/txt_pincode_tittle"
                android:fontFamily="@font/barlow"
                android:text="631002"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_card">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/rtl_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_green"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/white_circle"
            android:padding="6dp"
            android:src="@drawable/ic_upward" />

        <TextView
            android:id="@+id/ttl_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/img_up"
            android:fontFamily="@font/barlow"
            android:text="Total :  "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_grandtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ttl_tittle"
            android:fontFamily="@font/barlow"
            android:padding="6dp"
            android:text="₹ 576"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPurchase"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/itm_name"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_checkout"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rtl_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:background="@color/light_green">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_offer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/medium"
            app:cardBackgroundColor="@color/transparent_green"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow"
                android:padding="10dp"
                android:text="@string/txt_offer"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_offer"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/barlow"
            android:text="@string/txt_subtotal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_offer"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/txt_subtotal"
            android:fontFamily="@font/barlow"
            android:text="₹ 170"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_subtotal"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow"
            android:text="@string/txt_tax"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tax_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_subtotal"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/txt_tax"
            android:fontFamily="@font/barlow"
            android:text="₹ 170"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tax"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/barlow"
            android:text="@string/txt_service"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_service_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tax"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/txt_service"
            android:fontFamily="@font/barlow"
            android:text="₹ 170"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_down"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/txt_service"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_circular_border"
            android:padding="6dp"
            android:src="@drawable/i_arrow_down" />

        <TextView
            android:id="@+id/ttl_tittle_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_service"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img_down"
            android:fontFamily="@font/barlow"
            android:text="Total : "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gd_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_service"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ttl_tittle_down"
            android:fontFamily="@font/barlow"
            android:padding="3dp"
            android:text="₹ 576"
            android:textSize="18dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncheckout"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txt_service"
            android:layout_alignParentEnd="true"
            android:layout_margin="12dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_checkout"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>
</RelativeLayout>